changed map size

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-    #zombie_map {
-        width: 600px;
-        height: 400px;
-        background-color: grey;
-    }
+
+  #zombie_map {
+      height: 100%;
+      width: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      background-color: grey;
+  }
+
     </style>
   </head>
   <body>
